--- a/README.pod
+++ b/README.pod
@@ -1,12 +1,14 @@
 =pod
 
+=encoding utf-8
+
 =head1 NAME
 
 App::mymeta_requires - Extract module requirements from MYMETA files
 
 =head1 VERSION
 
-version 0.004
+version 0.005
 
 =head1 SYNOPSIS
 
